RESOLVED FIXED67562
REGRESSION (r94452): 20 http/tests tests failing on Qt Linux Release
https://bugs.webkit.org/show_bug.cgi?id=67562
Summary REGRESSION (r94452): 20 http/tests tests failing on Qt Linux Release
Robert Hogan
Reported 2011-09-03 05:24:45 PDT
The following tests started failing on Qt Linux Release between r94481 and r94483 (inclusive): http/tests/canvas/philip/tests/security.reset.html http/tests/canvas/philip/tests/security.pattern.cross.html http/tests/canvas/philip/tests/security.pattern.create.html http/tests/canvas/philip/tests/security.pattern.image.strokeStyle.html http/tests/canvas/philip/tests/security.pattern.canvas.fillStyle.html http/tests/canvas/philip/tests/security.drawImage.canvas.html http/tests/canvas/philip/tests/security.drawImage.image.html http/tests/canvas/philip/tests/security.pattern.image.fillStyle.html http/tests/canvas/philip/tests/security.pattern.canvas.timing.html http/tests/canvas/philip/tests/security.pattern.canvas.strokeStyle.html http/tests/cache/history-only-cached-subresource-loads.html http/tests/cache/history-only-cached-subresource-loads-max-age-https.html http/tests/cache/subresource-expiration-1.html http/tests/cache/subresource-expiration-2.html http/tests/inspector/console-cd.html http/tests/inspector/console-cd-completions.html http/tests/inspector-enabled/console-log-before-frame-navigation.html http/tests/inspector-enabled/dom-storage-open.html http/tests/inspector-enabled/console-clear-arguments-on-frame-remove.html http/tests/inspector-enabled/database-open.html http://trac.webkit.org/log/trunk?rev=94452 http://build.webkit.org/results/Qt%20Linux%20Release/r94483%20(37122)/results.html failed r94452 co-incided with another change that broke the Qt bot so got masked. I confirmed locally that this change is causing the crashes.
Attachments
Patch (2.99 KB, patch)
2011-09-03 19:10 PDT, Mark Hahnenberg
no flags
Robert Hogan
Comment 1 2011-09-03 06:42:35 PDT
Fails at: DumpRenderTree: ../../../Source/JavaScriptCore/wtf/dtoa/cached-powers.cc:164: static void WTF::double_conversion::PowersOfTenCache::GetCachedPowerForBinaryExponentRange(int, int, WTF::double_conversion::DiyFp*, int*): Assertion `0 <= index && index < kCachedPowersLength' failed.
Mark Hahnenberg
Comment 2 2011-09-03 19:10:20 PDT
WebKit Review Bot
Comment 3 2011-09-04 23:47:23 PDT
Comment on attachment 106272 [details] Patch Clearing flags on attachment: 106272 Committed r94514: <http://trac.webkit.org/changeset/94514>
WebKit Review Bot
Comment 4 2011-09-04 23:47:28 PDT
All reviewed patches have been landed. Closing bug.
Justin Novosad
Comment 5 2011-09-06 12:47:13 PDT
*** Bug 67626 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.