REGRESSION (r94452): 20 http/tests tests failing on Qt Linux Release https://bugs.webkit.org/show_bug.cgi?id=67562

Patch by Mark Hahnenberg <mhahnenberg@apple.com> on 2011-09-04
Reviewed by Darin Adler.

Fixing the build (again which was broken by the dtoa patch.  Needed
to make sure WTF::double_conversion::initialize() is called for Qt
as well as adding a check for WinCE in dtoa/utils.h

* runtime/InitializeThreading.cpp:
(JSC::initializeThreadingOnce):
* wtf/dtoa/cached-powers.cc:
* wtf/dtoa/utils.h:

Canonical link: https://commits.webkit.org/83421@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94514 268f45cc-cd09-0410-ab3c-d52691b4dbfc